cmake_minimum_required(VERSION 3.8.0)

set(TARGET_NAME http_client)
set(HTTP_CLIENT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

include_directories(${HTTP_CLIENT_INCLUDE_DIR})

file(GLOB_RECURSE SRC_LIST *.cc)

add_library(${TARGET_NAME} STATIC ${SRC_LIST})

set(HTTP_CLIENT_MODULE ${TARGET_NAME} PARENT_SCOPE)
set(HTTP_CLIENT_INCLUDE_DIR ${HTTP_CLIENT_INCLUDE_DIR} CACHE INTERNAL "http_client_include")

list(APPEND TEST_INCLUDE_DIR ${HTTP_CLIENT_INCLUDE_DIR})
set(TEST_INCLUDE_DIR ${TEST_INCLUDE_DIR} CACHE INTERNAL "test_include")